--- a/style.css
+++ b/style.css
@@ -29,10 +29,6 @@ h1 {
   max-width: 7em;
 }
 
-a {
-  color: black;
-}
-
 canvas {
   z-index: 1;
   margin: 0;
@@ -90,7 +86,7 @@ footer ul li {
   
 }
 
-footer ul li a:visited {
+a, footer ul li a:visited {
   color: black;
 }
 
